2005-08-20  Francois Dumont  <dums@stlport...>

	* stlport/stl/_list.h, _slist.h: Fix move constructor implementation
	thanks Henrik Goldman (www.x-formation.com) report.

	* stlport/stl/_alloc.h: Fix type_traits specialization for allocator
	type. Now specialization is only apply for the default STLport allocator
	implementation and not for potential user specialization.

	* stlport/stl/_deque.h, _hashtable.h, _string.h, _tree.h, _vector.h:
	Simplification of the move framework application especially in the
	definition of the containers __move_traits specialization. Many 
	_AsMoveSource call replaced by explicit call to the move constructor
	when we are sure that there is one.

	* test/unit/mvctor_test.cpp: Add many tests to check move contructor
	implementations.

	* stlport/stl/_function_base.h: Add type_traits specialization for the
	less functor to help the move framework when dealing with associative
	containers.

	* test/unit/mvctor_test.cpp: Add a new test case checking correct move
	semantic support for all STL containers.

	* stlport/stl/_rope.h: Add move semantic support to the rope class.

2005-08-19  Petr Ovtchenkov  <ptr@island...>

	* build/Makefiles/gmake/gcc.mak: fix extraction of gcc version.
	Thanks Thomas Kho.

2005-08-18  Francois Dumont  <dums@stlport...>

	* stlport/stl/_deque.c: Fix _M_erase range for movable types method
	implementation, same bug as below in vector.

	* test/unit/mvctor.cpp: Improve test case on vector to reveal bug
	below and add same tests for deque which is the other container that
	use the move contructor feature.

2005-08-18  Petr Ovtchenkov  <ptr@island...>

	* INSTALL: add some words about multithread options and libraries.

	* stlport/stl/_fstream.c: some code clean to reduce bogus compiler
	warnings with -Wall.

	* stlport/config/stl_gcc.h: seems HP-UX has no llabs and lldiv.

2005-08-17  Francois Dumont  <dums@stlport...>

	* stlport/stl/_vector.h: Fix _M_erase range for movable types